@@ -15,7 +15,6 @@ import hanglog.trip.dto.request.ItemRequest;
 import hanglog.trip.dto.request.PlaceRequest;
 import hanglog.trip.dto.response.ItemResponse;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -84,7 +83,8 @@ public class ItemService {
                 placeRequest.getName(),
                 placeRequest.getLatitude(),
                 placeRequest.getLongitude(),
-                category);
+                category
+        );
     }
 
     private Expense getExpenseByItemRequest(final ItemRequest itemRequest) {
@@ -125,9 +125,8 @@ public class ItemService {
     }
 
     public List<ItemResponse> getItems() {
-        return itemRepository.findAll()
-                .stream()
+        return itemRepository.findAll().stream()
                 .map(ItemResponse::of)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
